[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-secrets-env"
version = "0.1.0"
description = "Carrega segredos do AWS Secrets Manager e injeta em variáveis de ambiente"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Luis Eduardo Silva", email = "luis.eduardo2.developer@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    "boto3>=1.34.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0"
]

security = [
    "bandit>=1.7.9",
    "safety>=3.2.6",
    "pysonar>=1.2.0.2419",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pylint>=3.2.0",
    "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/lluiseduardo-silva/python-secret-manager-env-loader"
